--- a/Day-01/01-RIAChallenges/index.html
+++ b/Day-01/01-RIAChallenges/index.html
@@ -24,16 +24,32 @@
 
 		//Model
 		function SalaryCalculator(){
-			this.basic = 0;
+			//this.basic = 0;
+			var _basic = 0;
+			this.onBasicChange = null;
+			this.getBasic = function(){
+				return _basic;
+			};
+			this.setBasic = function(value){
+				if (_basic === value) return;
+				_basic = value;
+				//trigger change notification for basic
+				if (typeof this.onBasicChange === 'function')
+					this.onBasicChange();
+			}
+
 			this.hra = 0;
 			this.da = 0;
 			this.tax = 0;
 			this.salary = 0;
+			this.onSalaryChange = null;
 		}
 		SalaryCalculator.prototype.calculate = function(){
-			var gross = this.basic + this.hra + this.da;
+			var gross = this.getBasic() + this.hra + this.da;
 			var net = gross * ((100-this.tax)/100);
 			this.salary = net;
+			if (typeof this.onSalaryChange === 'function')
+				this.onSalaryChange();
 		}
 
 		//View
@@ -41,7 +57,7 @@
 			window.calculator = new SalaryCalculator();
 
 			$("#txtBasic").change(function(){
-				calculator.basic = $("#txtBasic").val().toInt();
+				calculator.setBasic($("#txtBasic").val().toInt());
 			});
 			$("#txtHra").change(function(){
 				calculator.hra = $("#txtHra").val().toInt();
@@ -55,13 +71,18 @@
 
 			$("#btnCalculate").click(function(){
 				calculator.calculate();
-
-				$("#divResult").html('Rs.' + calculator.salary);
 			});
 
 			$("#rangeTax").change(function(){
 				$("#spanTax").html(this.value);
 			});
+
+			calculator.onBasicChange = function(){
+				$("#txtBasic").val(calculator.getBasic());
+			};
+			calculator.onSalaryChange = function(){
+				$("#divResult").html('Rs.' + calculator.salary);
+			};
 		});
 
 	</script>
