--- a/Day-01/01-RIAChallenges/index.html
+++ b/Day-01/01-RIAChallenges/index.html
@@ -25,7 +25,7 @@
 		//Model
 		function SalaryCalculator(){
 			//this.basic = 0;
-			var _basic = 0;
+			/*var _basic = 0;
 			this.onBasicChange = null;
 			this.getBasic = function(){
 				return _basic;
@@ -37,36 +37,73 @@
 				if (typeof this.onBasicChange === 'function')
 					this.onBasicChange();
 			}
-
 			this.hra = 0;
 			this.da = 0;
 			this.tax = 0;
 			this.salary = 0;
-			this.onSalaryChange = null;
+
+			*/
+
+			var _data = {
+				basic : 0,
+				hra : 0,
+				da : 0,
+				tax : 0,
+				salary : 0
+			};
+
+			this.get = function(attrName){
+				return _data[attrName];
+			};
+
+			this.set = function(attrName, value){
+				if (_data[attrName] === value) return;
+				_data[attrName] = value;
+				//trigger change notification for 'attrName'
+				var eventHandlerFns = _eventHandlers[attrName];
+				eventHandlerFns.forEach(function(eventHandlerFn){
+					if (typeof eventHandlerFn === 'function')
+						eventHandlerFn();	
+				});
+				
+			}
+
+			var _eventHandlers = {
+				basic : [],
+				hra : [],
+				da : [],
+				tax : [],
+				salary : []
+			};
+
+			this.onChange = function(attrName, listenerFn){
+				_eventHandlers[attrName].push( listenerFn );
+			}
+			//this.onSalaryChange = null;
 		}
 		SalaryCalculator.prototype.calculate = function(){
-			var gross = this.getBasic() + this.hra + this.da;
-			var net = gross * ((100-this.tax)/100);
-			this.salary = net;
-			if (typeof this.onSalaryChange === 'function')
-				this.onSalaryChange();
+			var gross = this.get('basic') + this.get('hra') + this.get('da');
+			var net = gross * ((100-this.get('tax'))/100);
+			this.set('salary', net);
+		
 		}
 
 		//View
 		$(document).ready(function(){
 			window.calculator = new SalaryCalculator();
 
+			//React to user actions
 			$("#txtBasic").change(function(){
-				calculator.setBasic($("#txtBasic").val().toInt());
+				calculator.set('basic', $("#txtBasic").val().toInt());
 			});
 			$("#txtHra").change(function(){
-				calculator.hra = $("#txtHra").val().toInt();
+				calculator.set('hra', $("#txtHra").val().toInt());
 			});
 			$("#txtDa").change(function(){
-				calculator.da = $("#txtDa").val().toInt();
+				calculator.set('da', $("#txtDa").val().toInt());
 			});
 			$("#rangeTax").change(function(){
-				calculator.tax = $("#rangeTax").val().toInt();
+				calculator.set('tax', $("#rangeTax").val().toInt());
 			});
 
 			$("#btnCalculate").click(function(){
@@ -77,12 +114,22 @@
 				$("#spanTax").html(this.value);
 			});
 
-			calculator.onBasicChange = function(){
-				$("#txtBasic").val(calculator.getBasic());
-			};
-			calculator.onSalaryChange = function(){
-				$("#divResult").html('Rs.' + calculator.salary);
-			};
+			//React to user actions
+			calculator.onChange('basic', function(){
+				$("#txtBasic").val(calculator.get('basic'));
+			});
+			calculator.onChange('hra', function(){
+				$("#txtHra").val(calculator.get('hra'));
+			});
+			calculator.onChange('da', function(){
+				$("#txtDa").val(calculator.get('da'));
+			});
+			calculator.onChange('tax', function(){
+				$("#rangeTax").val(calculator.get('tax'));
+			});
+			calculator.onChange('salary', function(){
+				$("#divResult").html('Rs.' + calculator.get('salary'));
+			});
 		});
 
 	</script>
