--- a/Day-01/02-Angular-Scope/index.html
+++ b/Day-01/02-Angular-Scope/index.html
@@ -18,7 +18,7 @@
 	</style>
 	<script src="jquery-1.12.1.js"></script>
 	<script src="angular.min.js"></script>
-
+	<script src="utils.js"></script>
 	<script type="text/javascript">
 		Object.prototype.toInt = function(){
 			return parseInt(this,10);
@@ -39,6 +39,10 @@
 			var gross = this.basic.toInt() + this.hra.toInt() + this.da.toInt();
 			var net = gross * ((100-this.tax.toInt())/100);
 			this.salary = net;
+		};
+
+		SalaryCalculator.prototype.reset = function(){
+			this.basic = this.hra = this.da = this.tax = this.salary = 0;
 		}
 		
 
@@ -46,71 +50,6 @@
 		$(document).ready(function(){
 			window.calculator = scope.calculator = new SalaryCalculator();
 
-			//React to user actions
-			$("*[app-model]").each(function(index, element){
-				var $element = $(element),
-					model = $element.attr("app-model");
-
-				$element.change(function(){
-					scope.$apply(function(){
-						var expr = model + ' = ' + $element.val();
-						scope.$eval(expr);
-					});
-				});
-				scope.$watch(model, function(newValue, oldValue){
-					$element.val(newValue);
-				});
-			})
-
-			
-
-
-			/*$("#txtHra").change(function(){
-				scope.$apply(function(){
-					calculator.hra = $("#txtHra").val().toInt();
-				});
-			});
-			scope.$watch('calculator.hra', function(newValue, oldValue){
-				$("#txtHra").val(newValue);
-			});
-
-
-			$("#txtDa").change(function(){
-				scope.$apply(function(){
-					calculator.da = $("#txtDa").val().toInt();
-				});
-			});
-			$("#rangeTax").change(function(){
-				scope.$apply(function(){
-					calculator.tax = $("#rangeTax").val().toInt();
-				});
-			});
-			
-			$("#rangeTax").change(function(){
-				$("#spanTax").html(this.value);
-			});
-			*/
-
-			$("#btnCalculate").click(function(){
-				scope.$apply(function(){
-					calculator.calculate();
-				});
-			});
-
-			
-
-			//React to user actions
-			
-			
-			scope.$watch('calculator.da', function(newValue, oldValue){
-				$("#txtDa").val(newValue);
-			});
-			scope.$watch('calculator.tax', function(newValue, oldValue){
-				$("#rangeTax").val(newValue);
-			});
-			scope.$watch('calculator.salary', function(newValue, oldValue){
-				$("#divResult").html('Rs.' + newValue);
-			});
 		});
 
 	</script>
@@ -134,13 +73,14 @@
 		<div class="field">
 			<label for="">Tax [%] :</label>
 			<input type="range" name="" id="rangeTax" min="0" max="30" value="0" app-model="calculator.tax">
-			<span id="spanTax">[Tax]</span>
+			<span id="spanTax" app-bind="calculator.tax">[Tax]</span>
 		</div>
 		<div class="field">
-			<input type="button" value="Calculate" id="btnCalculate">
+			<input type="button" value="Calculate" id="btnCalculate" app-click="calculator.calculate()">
+			<input type="button" value="Reset" app-click="calculator.reset()">
 		</div>
 		<div class="field">
-			<div id="divResult">[Salary]</div>
+			<div id="divResult" app-bind="calculator.salary">[Salary]</div>
 		</div>
 	</div>
 </body>
