--- a/Day-02/01-BugTracker/index.html
+++ b/Day-02/01-BugTracker/index.html
@@ -3,9 +3,82 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bug Tracker</title>
+	<style type="text/css">
+	.closed{
+		color : red;
+		text-decoration: line-through;
+		font-style: italic;
+		font-weight: bold;
+	}
+	section{
+		margin-bottom: 10px;
+	}
+	ol{
+		width: 400px;
+		list-style: none;
+	}
+	li{
+		border : 1px solid gray;
+		padding: 5px;
+		border-radius: 5px;
+		margin-bottom: 10px;
+		background-color: #e7e7e7;
+		font-size: 16pt;
+		cursor: pointer;
+	}
+	.stats{
+		font-size: 16pt;
+	}
+	</style>
 	<script src="angular.min.js"></script>
+	<script>
+		/*
+		1. List the bugs
+		2. Add a new bug
+		3. Toggle the closed status of the bug
+		4. Remove closed bugs
+		5. Display stats
+		6. Search for bugs
+		7. Sort the bugs
+		8. Improvise the bug display
+		9. Persist the bugs in the localstorage
+		10. Display 'createdAt' for each bug
+		11. Persist the bugs in the server
+		12. Categorize the bugs
+		*/
+
+	</script>
 </head>
 <body>
-	
+	<h1>Bug Tracker</h1>
+	<hr>
+	<section class="stats">
+		<span class="closed">2</span>
+		<span> / </span>
+		<span>5</span>
+	</section>
+	<section class="search">
+		<label for="">Search :</label>
+		<input type="text" name="" id="">
+		<label for=""> Closed :?</label>
+		<input type="checkbox" name="" id="">
+		<input type="button" value="Show All">
+	</section>
+	<section class="sort">
+		<label for="">Order By :</label>
+		<input type="text" name="" id="">
+		<label for="">Descending ? :</label>
+		<input type="checkbox" name="" id="">
+	</section>
+	<section class="list">
+		<label for="">Bug :</label>
+		<input type="text" name="" id="">
+		<input type="button" value="Add Bug">
+		<input type="button" value="Remove Clsoed">
+		<ol>
+			<li class="closed">Server communication failure</li>
+			<li>Data validation is buggy</li>
+		</ol>
+	</section>
 </body>
 </html>
