--- a/Day-02/01-BugTracker/index.html
+++ b/Day-02/01-BugTracker/index.html
@@ -35,11 +35,11 @@
 		/*
 		1. List the bugs - done
 		2. Add a new bug - done
-		3. Toggle the closed status of the bug
-		4. Remove closed bugs
-		5. Display stats
-		6. Search for bugs
-		7. Sort the bugs
+		3. Toggle the closed status of the bug - done
+		4. Remove closed bugs - done
+		5. Display stats - done
+		6. Search for bugs - done
+		7. Sort the bugs - done
 		8. Improvise the bug display
 		9. Persist the bugs in the localstorage
 		10. Display 'createdAt' for each bug
@@ -50,21 +50,69 @@
 	</script>
 	<script>
 		var bugTrackerApp = angular.module("bugTrackerApp", ["ng"]);
-		bugTrackerApp.controller("bugsController", function($scope){
+		//constructor function
+
+		bugTrackerApp.factory('Bug', function(){
+			function Bug(defaults){
+				this.name = defaults.name || '';
+				this.isClosed = defaults.isClosed || false;
+			}
+			Bug.prototype.toggle = function(){
+				this.isClosed = !this.isClosed;
+			}
+			return Bug;
+		});
+		
+
+
+		bugTrackerApp.controller("bugsController", function($scope, Bug){
 			$scope.bugs = [
-				{ name : "Server communication error", isClosed : false},
-				{ name : "Data validation failure", isClosed : false},
-				{ name : "User authentication wrong", isClosed : false},
+				new Bug({ name : "Server communication error", isClosed : false}),
+				new Bug({ name : "Data validation failure", isClosed : true}),
+				new Bug({ name : "User authentication wrong", isClosed : false}),
 			];
 			
 			$scope.addNew = function(newBug){
-				$scope.bugs.push(newBug);
+				var bug = new Bug({name : newBug});
+				$scope.bugs.push(bug);
 			};
 
 			$scope.toggleBug = function(bug){
-				bug.isClosed = !bug.isClosed;
+				//bug.isClosed = !bug.isClosed;
+				bug.toggle();
 			};
+
+			$scope.removeClosed = function(){
+				for(var i=$scope.bugs.length-1; i>=0; i--)
+					if ($scope.bugs[i].isClosed)
+						$scope.bugs.splice(i,1);
+			};
+
+			
+		});
+
+		bugTrackerApp.filter('toClosedCount', function($filter){
+			/*return function(bugs){
+				var result = 0;
+				for(var i=0; i<bugs.length; i++)
+					if (bugs[i].isClosed)
+						++result;
+				return result;
+			}*/
+			var builtinFilterFilter = $filter('filter');
+			return function(bugs){
+				return builtinFilterFilter(bugs, {isClosed : true}).length;
+			}
 		})
+
+		bugTrackerApp.value("defaultTrimLength", 30);
+
+		bugTrackerApp.filter('trimText', function(defaultTrimLength){
+			return function(data, trimLength){
+				trimLength = trimLength || defaultTrimLength
+				return data.length > trimLength ? data.substr(0,trimLength) + '...' : data;
+			}
+		});
 	</script>
 </head>
 <body ng-app="bugTrackerApp">
@@ -72,30 +120,34 @@
 	<hr>
 	<div ng-controller="bugsController">
 		<section class="stats">
-			<span class="closed">2</span>
+			<span class="closed">{{ bugs | toClosedCount }}</span>
 			<span> / </span>
 			<span>{{bugs.length}}</span>
 		</section>
 		<section class="search">
 			<label for="">Search :</label>
-			<input type="text" name="" id="">
+			<input type="text" ng-model="searchBug.name">
 			<label for=""> Closed :?</label>
-			<input type="checkbox" name="" id="">
-			<input type="button" value="Show All">
+			<input type="checkbox" ng-model="searchBug.isClosed">
+			<input type="button" value="Show All" ng-click="searchBug.isClosed = undefined">
 		</section>
 		<section class="sort">
 			<label for="">Order By :</label>
-			<input type="text" name="" id="">
+			<input type="text" ng-model="sortBugBy">
 			<label for="">Descending ? :</label>
-			<input type="checkbox" name="" id="">
+			<input type="checkbox" ng-model="sortByDescending">
 		</section>
 		<section class="list">
 			<label for="">Bug :</label>
 			<input type="text" ng-model="newBugName">
 			<input type="button" value="Add Bug" ng-click="addNew(newBugName)">
-			<input type="button" value="Remove Clsoed">
+			<input type="button" value="Remove Clsoed" ng-click="removeClosed()">
 			<ol>
-				<li ng-repeat="bug in bugs track by $index" ng-click="toggleBug(bug)">{{bug}}</li>
+				<li 
+					ng-repeat="bug in (bugs | filter:searchBug | orderBy:sortBugBy:sortByDescending)" 
+					ng-click="toggleBug(bug)"
+					ng-class="{closed : bug.isClosed}"
+				>{{bug.name | trimText}}</li>
 			</ol>
 		</section>
 	</div>
