Bug Server communication using $http

--- a/Day-03/03-BugTracker-Server/public/index.html
+++ b/Day-03/03-BugTracker-Server/public/index.html
@@ -70,6 +70,7 @@
 				this.id = defaults.id || 0;
 				this.name = defaults.name || '';
 				this.isClosed = defaults.isClosed || false;
+				this.createdAt = defaults.createdAt || new Date();
 			}
 			Bug.prototype.toggle = function(){
 				this.isClosed = !this.isClosed;
@@ -79,25 +80,38 @@
 		
 
 
-		bugTrackerApp.controller("bugsController", function($scope, Bug){
-			var maxBugId = 0;
+		bugTrackerApp.controller("bugsController", function($scope, Bug, $http){
+			
 
 			$scope.bugs = [];
 
+			var promise = $http.get("http://localhost:3000/bugs");
+			promise.then(function(response){
+				$scope.bugs = response.data.map(function(bugData){
+					return new Bug(bugData);
+				});
+			});
 			
 			$scope.addNew = function(newBug){
-				var bug = new Bug({id : ++maxBugId, name : newBug});
-				$scope.bugs.push(bug);
+				var bug = new Bug({name : newBug});
+				$http
+					.post("http://localhost:3000/bugs", bug)
+					.then(function(response){
+						$scope.bugs.push(new Bug(response.data));
+					});
 			};
 
 			$scope.toggleBug = function(bug){
 				
 				bug.toggle();
+				$http.put("http://localhost:3000/bugs/" + bug.id, bug);
 			};
 
 			$scope.removeClosed = function(){
 				for(var i=$scope.bugs.length-1; i>=0; i--)
 					if ($scope.bugs[i].isClosed){
+						var bugToRemove = $scope.bugs[i];
+						$http.delete("http://localhost:3000/bugs/" + bugToRemove.id, bugToRemove);
 						$scope.bugs.splice(i,1);
 					}
 			};
