--- a/Day-03/04-RoutingDemo/index.html
+++ b/Day-03/04-RoutingDemo/index.html
@@ -14,6 +14,10 @@
 					templateUrl : 'templates/productsTemplate.html',
 					controller : 'productsController'
 				})
+				.when('/products/:id', {
+					templateUrl : 'templates/productInfoTemplate.html',
+					controller : 'productInfoController'
+				})
 				.when('/customers', {
 					templateUrl : 'templates/customersTemplate.html'	
 				})
@@ -33,6 +37,12 @@
 		});
 		myApp.controller("productsController", function($scope, productsService){
 			$scope.products = productsService.getAll();
+		});
+		myApp.controller('productInfoController', function($scope, productsService, $routeParams){
+			var pid = parseInt($routeParams.id);
+			$scope.product = productsService.getAll().filter(function(product){
+				return product.id === pid;
+			})[0];
 		});
 	</script>
 </head>
